it may be third commit

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -25,7 +25,10 @@ bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
 # マウス操作を有効にする
-setw -g mouse
+set-option -g mouse on
+bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
+bind -n WheelDownPane select-pane -t= \; send-keys -M
+
 
 # 256色端末を使用する
 set -g default-terminal "screen-256color"
