--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,4 @@
+
 # キーストロークのディレイを減らす
 set -sg escape-time 1
 
@@ -57,4 +58,23 @@ set -g pane-active-border-bg yellow
 set -g message-fg white
 set -g message-bg black
 set -g message-attr bright
+
+
+#コピー設定
+set-option -g default-command "reattach-to-user-namespace -l $SHELL"
+# Vi キーバインド
+set-window-option -g mode-keys vi
+
+# Prefix+v でコピーモード開始
+bind-key v copy-mode \; display "Copy mode!"
+#bind-key -t vi-copy v begin-selection
+
+# Prefix+Enter/y でコピー
+bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+bind-key -t vi-copy y     copy-pipe "reattach-to-user-namespace pbcopy"
+
+# Prefix+p でペースト
+# クリップボードにも保存されているので Cmd-v でもペースト可能
+bind-key p paste-buffer
+
 
