--- a/.tmux.conf
+++ b/.tmux.conf
@@ -75,6 +75,6 @@ bind-key -t vi-copy y     copy-pipe "reattach-to-user-namespace pbcopy"
 
 # Prefix+p でペースト
 # クリップボードにも保存されているので Cmd-v でもペースト可能
-bind-key p paste-buffer
+#bind-key p paste-buffer
 
 
