--- a/.tmux.conf
+++ b/.tmux.conf
@@ -61,7 +61,7 @@ set -g message-attr bright
 
 
 #コピー設定
-set-option -g default-command "reattach-to-user-namespace -l $SHELL"
+set-option -g default-command "which reattach-to-user-namespace > /dev/null 2>&1 && reattach-to-user-namespace -l $SHELL || $SHELL"
 # Vi キーバインド
 set-window-option -g mode-keys vi
 
@@ -75,6 +75,6 @@ bind-key -t vi-copy y     copy-pipe "reattach-to-user-namespace pbcopy"
 
 # Prefix+p でペースト
 # クリップボードにも保存されているので Cmd-v でもペースト可能
-#bind-key p paste-buffer
+bind-key p paste-buffer
 
 
