--- a/.tmux.conf
+++ b/.tmux.conf
@@ -70,6 +70,6 @@ bind-key v copy-mode \; display "Copy mode!"
 #bind-key -t vi-copy v begin-selection
 
 # Prefix+Enter/y でコピー
-bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
-bind-key -t vi-copy y     copy-pipe "reattach-to-user-namespace pbcopy"
+#bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+#bind-key -t vi-copy y     copy-pipe "reattach-to-user-namespace pbcopy"
 
