--- a/.nvim/rc/dein_lazy.toml
+++ b/.nvim/rc/dein_lazy.toml
@@ -1,2 +1,43 @@
 # 特定のファイルタイプで読み込む
 
+[[plugins]]
+repo = 'Shougo/deoplete.nvim'
+hook_source = '''
+  let g:deoplete#enable_at_startup = 1
+  inoremap <expr><tab> pumvisible() ? "\<C-n>" :
+        \ neosnippet#expandable_or_jumpable() ?
+        \    "\<Plug>(neosnippet_expand_or_jump)" : "\<tab>"
+'''
+on_i = 1
+
+[[plugins]]
+repo = 'Shougo/neosnippet'
+hook_source = '''
+  imap <C-k> <Plug>(neosnippet_expand_or_jump)
+  smap <C-k> <Plug>(neosnippet_expand_or_jump)
+  xmap <C-k> <Plug>(neosnippet_expand_target)
+  if has('conceal')
+    set conceallevel=2 concealcursor=niv
+  endif
+'''
+on_i  = 1
+on_ft = ['snippet']
+depends = ['neosnippet-snippets']
+
+
+
+[[plugins]]
+repo= 'jalvesaq/Nvim-R'
+on_ft = ['rmd','r']
+hook_source = '''
+"n-vim
+vmap <Space> <Plug>RDSendSelection
+nmap <Space> <Plug>RDSendLine
+set infercase
+set hlsearch
+set incsearch
+"let R_in_buffer = 0
+let R_vsplit = 1
+let R_nvimpager = "horizontal"
+'''
+
