--- a/nvim/dein_lazy.toml
+++ b/nvim/dein_lazy.toml
@@ -16,9 +16,9 @@ hook_source = '''
   imap <C-k> <Plug>(neosnippet_expand_or_jump)
   smap <C-k> <Plug>(neosnippet_expand_or_jump)
   xmap <C-k> <Plug>(neosnippet_expand_target)
-  if has('conceal')
-    set conceallevel=2 concealcursor=niv
-  endif
+#  if has('conceal')
+#    set conceallevel=2 concealcursor=niv
+#  endif
 '''
 on_i  = 1
 on_ft = ['snippet']
