deopleteの設定よくわからない

--- a/nvim/dein.toml
+++ b/nvim/dein.toml
@@ -16,8 +16,8 @@ repo = 'Shougo/neosnippet-snippets'
 [[plugins]]
 repo = 'cohama/lexima.vim'
 
-#[[plugins]]
-#repo = 'Shougo/context_filetype.vim'
+[[plugins]]
+repo = 'Shougo/context_filetype.vim'
 #
 #[[plugins]]
 #repo = 'Shougo/neosnippet.vim'
