--- a/nvim/dein_lazy.toml
+++ b/nvim/dein_lazy.toml
@@ -1,14 +1,23 @@
 # 特定のファイルタイプで読み込む
 
+#[[plugins]]
+#repo = 'Shougo/deoplete.nvim'
+#hook_source = '''
+#  let g:deoplete#enable_at_startup = 1
+#  inoremap <expr><tab> pumvisible() ? "\<C-n>" :
+#        \ neosnippet#expandable_or_jumpable() ?
+#        \    "\<Plug>(neosnippet_expand_or_jump)" : "\<tab>"
+#'''
+#on_i = 1
+
 [[plugins]]
 repo = 'Shougo/deoplete.nvim'
-hook_source = '''
-  let g:deoplete#enable_at_startup = 1
-  inoremap <expr><tab> pumvisible() ? "\<C-n>" :
-        \ neosnippet#expandable_or_jumpable() ?
-        \    "\<Plug>(neosnippet_expand_or_jump)" : "\<tab>"
-'''
+depends = 'context_filetype.vim'
+if = "has('nvim')"
 on_i = 1
+hook_source = '''
+let g:deoplete#enable_at_startup = 1
+'''
 
 [[plugins]]
 repo = 'Shougo/neosnippet'
