deopleteの設定を見直し

--- a/nvim/dein_lazy.toml
+++ b/nvim/dein_lazy.toml
@@ -16,7 +16,7 @@ depends = 'context_filetype.vim'
 if = "has('nvim')"
 on_i = 1
 hook_source = '''
-let g:deoplete#enable_at_startup = 1
+source ~/.config/nvim/plugins/deoplete.rc.vim
 '''
 
 [[plugins]]
