--- a/nvim/dein_lazy.toml
+++ b/nvim/dein_lazy.toml
@@ -1,15 +1,5 @@
 # 特定のファイルタイプで読み込む
 
-#[[plugins]]
-#repo = 'Shougo/deoplete.nvim'
-#hook_source = '''
-#  let g:deoplete#enable_at_startup = 1
-#  inoremap <expr><tab> pumvisible() ? "\<C-n>" :
-#        \ neosnippet#expandable_or_jumpable() ?
-#        \    "\<Plug>(neosnippet_expand_or_jump)" : "\<tab>"
-#'''
-#on_i = 1
-
 [[plugins]]
 repo = 'Shougo/deoplete.nvim'
 depends = 'context_filetype.vim'
@@ -47,6 +37,28 @@ let R_vsplit = 1
 let R_nvimpager = "horizontal"
 '''
 
+
+[[plugins]]
+repo = 'w0rp/ale'
+on_ft = ['python']
+hook_source = '''
+"n-vim
+nmap <silent> <C-w>j <Plug>(ale_next_wrap)
+nmap <silent> <C-w>k <Plug>(ale_previous_wrap)
+let g:ale_sign_column_always = 1
+let g:ale_statusline_format = ['⨉ %d', '⚠ %d', '⬥ ok']
+'''
+
 [[plugins]]
 repo = 'davidhalter/jedi-vim'
 on_ft = 'python'
+
+
+#[[plugins]]
+#repo = 'neomake/neomake'
+#on_ft = 'python'
+#if = "has('nvim')"
+#hook_add = '''
+#autocmd! BufWritePost * Neomake
+#let g:neomake_python_enabled_makers = ['flake8']
+#'''
