--- a/nvim/dein_lazy.toml
+++ b/nvim/dein_lazy.toml
@@ -50,8 +50,12 @@ let g:ale_statusline_format = ['⨉ %d', '⚠ %d', '⬥ ok']
 '''
 
 [[plugins]]
-repo = 'davidhalter/jedi-vim'
+repo = 'zchee/deoplete-jedi'
 on_ft = 'python'
+
+#[[plugins]]
+#repo = 'davidhalter/jedi-vim'
+#on_ft = 'python'
 
 
 #[[plugins]]
