--- a/nvim/dein_lazy.toml
+++ b/nvim/dein_lazy.toml
@@ -57,3 +57,16 @@ on_ft = 'python'
 repo = 'zchee/deoplete-jedi'
 on_ft = 'python'
 depends = ['deoplete.nvim','jedi']
+
+
+[[plugins]]
+repo = 'iamcco/mathjax-support-for-mkdp'
+on_ft = ['markdown','mkd']
+
+[[plugins]]
+repo = 'iamcco/markdown-preview.vim'
+depends = ['mathjax-support-for-mkdp']
+on_ft = ['markdown','mkd']
+hook_source = '''
+let g:mkdp_path_to_chrome = "open -a Google\\ Chrome"
+'''
