--- a/nvim/dein_lazy.toml
+++ b/nvim/dein_lazy.toml
@@ -70,3 +70,16 @@ on_ft = ['markdown','mkd']
 hook_source = '''
 let g:mkdp_path_to_chrome = "open -a Google\\ Chrome"
 '''
+
+[[plugins]]
+repo = 'godlygeek/tabular'
+on_ft = ['markdown','mkd']
+
+[[plugins]]
+repo = 'joker1007/vim-markdown-quote-syntax'
+on_ft = ['markdown','mkd']
+
+[[plugins]]
+repo = 'rcmdnk/vim-markdown'
+on_ft = ['markdown','mkd']
+
