--- a/nvim/dein_lazy.toml
+++ b/nvim/dein_lazy.toml
@@ -26,6 +26,10 @@ depends = ['neosnippet-snippets']
 repo= 'jalvesaq/Nvim-R'
 on_ft = ['rmd','r']
 hook_source = '''
+if !exists('g:deoplete#omni_patterns')
+    let g:deoplete#omni_patterns = {}
+endif
+let g:deoplete#omni_patterns.r = '[[:alnum:].\\]\+'
 "n-vim
 vmap <Space> <Plug>RDSendSelection
 nmap <Space> <Plug>RDSendLine
@@ -35,6 +39,10 @@ set incsearch
 "let R_in_buffer = 0
 let R_vsplit = 1
 let R_nvimpager = "horizontal"
+let maplocalleader = ","
+let R_assign = 0
+let R_objbr_place = "console,right"
+let R_objbr_opendf = 0
 '''
 
 
