--- a/nvim/dein_lazy.toml
+++ b/nvim/dein_lazy.toml
@@ -26,23 +26,7 @@ depends = ['neosnippet-snippets']
 repo= 'jalvesaq/Nvim-R'
 on_ft = ['rmd','r']
 hook_source = '''
-if !exists('g:deoplete#omni_patterns')
-    let g:deoplete#omni_patterns = {}
-endif
-let g:deoplete#omni_patterns.r = '[[:alnum:].\\]\+'
-"n-vim
-vmap <Space> <Plug>RDSendSelection
-nmap <Space> <Plug>RDSendLine
-set infercase
-set hlsearch
-set incsearch
-"let R_in_buffer = 0
-let R_vsplit = 1
-let R_nvimpager = "horizontal"
-let maplocalleader = ","
-let R_assign = 0
-let R_objbr_place = "console,right"
-let R_objbr_opendf = 0
+source ~/.config/nvim/plugins/Nvim-R.rc.vim
 '''
 
 
