vim virtual env

--- a/nvim/dein_lazy.toml
+++ b/nvim/dein_lazy.toml
@@ -50,6 +50,10 @@ let g:ale_statusline_format = ['⨉ %d', '⚠ %d', '⬥ ok']
 '''
 
 [[plugins]]
+repo = 'jmcantrell/vim-virtualenv'
+on_ft = 'python'
+
+[[plugins]]
 repo = 'davidhalter/jedi'
 on_ft = 'python'
 
