set keybind prefix C-g

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,6 @@
+set-option -g prefix C-g
+unbind C-b
+bind-key C-g send-prefix
 
 set-option -g default-command "which reattach-to-user-namespace > /dev/null 2>&1 && reattach-to-user-namespace -l $SHELL || $SHELL"
 # キーストロークのディレイを減らす
