--- a/nvim/dein_lazy.toml
+++ b/nvim/dein_lazy.toml
@@ -63,6 +63,10 @@ on_ft = 'python'
 depends = ['deoplete.nvim','jedi']
 
 [[plugins]]
+repo = 'Vimjas/vim-python-pep8-indent'
+on_ft = 'python'
+
+[[plugins]]
 repo = 'iamcco/mathjax-support-for-mkdp'
 on_ft = ['markdown','mkd']
 
