--- a/nvim/dein.toml
+++ b/nvim/dein.toml
@@ -58,3 +58,6 @@ depends = 'unite.vim'
 hook_add = '''
 source ~/.config/nvim/plugins/vimfiler.rc.vim
 '''
+
+[[plugins]]
+repo = 'bronson/vim-trailing-whitespace'
