--- a/nvim/dein.toml
+++ b/nvim/dein.toml
@@ -61,3 +61,9 @@ source ~/.config/nvim/plugins/vimfiler.rc.vim
 
 [[plugins]]
 repo = 'bronson/vim-trailing-whitespace'
+
+[[plugins]]
+repo = 'Shougo/neco-syntax'
+
+[[plugins]]
+repo = 'ujihisa/neco-look'
