グーグル翻訳を日本語から英語がデフォルトになるように設定

--- a/nvim/dein.toml
+++ b/nvim/dein.toml
@@ -42,6 +42,9 @@ repo = 'tpope/vim-fugitive'
 
 [[plugins]]
 repo = 'daisuzu/translategoogle.vim'
+hook_add = '''
+source ~/.config/nvim/plugins/translategoogle.rc.vim
+'''
 
 [[plugins]]
 repo = 'Shougo/denite.nvim'
